--- a/src/public/styles/index.scss
+++ b/src/public/styles/index.scss
@@ -7,9 +7,9 @@
 @import 'components/button';
 @import 'themes/background';
 
-// html {
-//     font-size: 16px;
-// }
+html {
+    font-size: 15px;
+}
 
 body {
     background-color: $background-color;
