--- a/src/public/styles/utilities/_variable.scss
+++ b/src/public/styles/utilities/_variable.scss
@@ -16,6 +16,7 @@ $primary: #04555c;
 $light: #f9f9f9;
 $lightT: #e1e8e9;
 $lightBlue: #ddfafa;
+$lightG: #bac3d4;
 $blueLight: #22a7f0;
 $deepSkyBlue: #19b5fe;
 $blueChambray: #3a539b;
