--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 section .button1, section .button2 {
   background-color: #22a7f0;
   border: 0;
@@ -360,6 +361,13 @@ footer .footer-icon:hover {
   font-weight: 800;
 }
 
+.home-page .header-content .slider .swiper .next-slide:hover,
+.home-page .header-content .slider .swiper .prev-slide:hover {
+  background: -webkit-linear-gradient(360deg, #426afd, #fdf144);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .home-page .header-content .slider .swiper:hover .next-slide,
 .home-page .header-content .slider .swiper:hover .prev-slide {
   visibility: visible;
@@ -367,7 +375,7 @@ footer .footer-icon:hover {
 
 .home-page .header-content .slider .swiper:hover .next-slide::after,
 .home-page .header-content .slider .swiper:hover .prev-slide::after {
-  background: -webkit-linear-gradient(360deg, #54e0a6, #fdf144);
+  background: -webkit-linear-gradient(360deg, #25d719, #f6e81f);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -487,6 +495,10 @@ footer .footer-icon:hover {
   margin-bottom: 1.2rem;
 }
 
+.home-page .recommended-news .admission-news .admission-news__content .card a {
+  height: 15rem;
+}
+
 @media only screen and (max-width: 992px) {
   .home-page .recommended-news .category {
     display: none;
@@ -499,6 +511,10 @@ footer .footer-icon:hover {
 
 .home-page .college-admissions .college-admissions__content .card {
   margin-bottom: 1.5rem;
+}
+
+.home-page .college-admissions .college-admissions__content .card a {
+  height: 13rem;
 }
 
 .home-page .specialized-training .Sub-title {
@@ -514,10 +530,11 @@ footer .footer-icon:hover {
 }
 
 .home-page .infrastructure {
-  padding-bottom: 1.2rem;
+  padding-bottom: 1.8rem;
 }
 
 .home-page .infrastructure .infrastructure__content {
+  margin-top: 0.8rem;
   position: relative;
 }
 
@@ -589,6 +606,7 @@ footer .footer-icon:hover {
 }
 
 .home-page .infrastructure .infrastructure__content .next-card {
+  visibility: hidden;
   color: #474580;
   position: absolute;
   right: -2rem;
@@ -600,6 +618,7 @@ footer .footer-icon:hover {
 }
 
 .home-page .infrastructure .infrastructure__content .prev-card {
+  visibility: hidden;
   color: #474580;
   position: absolute;
   left: -2rem;
@@ -610,6 +629,11 @@ footer .footer-icon:hover {
   font-weight: 800;
 }
 
+.home-page .infrastructure .infrastructure__content:hover .next-card,
+.home-page .infrastructure .infrastructure__content:hover .prev-card {
+  visibility: visible;
+}
+
 .home-page .news-events .news-events__heading {
   text-align: center;
 }
@@ -618,8 +642,55 @@ footer .footer-icon:hover {
   margin-top: 0;
 }
 
-.home-page .news-events .news-events__content .card {
+.home-page .news-events .news-events__content .news-card {
   margin-top: 1.2rem;
+  padding-top: 0.8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-top: 1px solid #e5e5e5;
+}
+
+.home-page .news-events .news-events__content .news-card:first-child {
+  border: none;
+}
+
+.home-page .news-events .news-events__content .news-card > a {
+  width: 10rem;
+  height: 6.8rem;
+}
+
+.home-page .news-events .news-events__content .news-card > a img {
+  border-radius: 0.3rem;
+}
+
+.home-page .news-events .news-events__content .news-card .card-body {
+  min-width: 23rem;
+  padding: 0 1rem;
+}
+
+.home-page .news-events .news-events__content .news-card .card-body .card-title {
+  color: #424242;
+  font-size: 1.2rem;
+}
+
+.home-page .news-events .news-events__content .news-card .card-body .card-text {
+  color: #424242;
+  font-size: 1rem;
+}
+
+.home-page .news-events .news-events__content .view-news-list {
+  text-align: right;
+}
+
+.home-page .news-events .news-events__content .view-news-list .more-btn {
+  background: #f03434;
+  color: #fff;
+  font-size: 1rem;
 }
 
 .home-page .news-events .announcement .announcement-list .announcement-list__heading {
@@ -640,8 +711,28 @@ footer .footer-icon:hover {
   padding: 0.65rem 1.2rem;
 }
 
+.home-page .news-events .announcement .announcement-list .announcement-list__content {
+  padding: 0.9rem 1rem;
+}
+
+.home-page .news-events .announcement .announcement-list .announcement-list__content .notification {
+  margin-bottom: 1rem;
+}
+
+.home-page .tuition .tuition__heading {
+  position: relative;
+}
+
+.home-page .tuition .tuition__content .tuition-card .card-img-top {
+  height: 11rem;
+}
+
 .home-page .activities .activities__heading {
   position: relative;
+}
+
+.home-page .activities .activities__content .activity-card .card-img-top {
+  height: 12rem;
 }
 
 .home-page section .heading--center {
@@ -712,7 +803,7 @@ footer .footer-icon:hover {
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
-  font-family: din-round,sans-serif;
+  font-family: din-round, sans-serif;
   font-size: 0.8rem;
   font-weight: 700;
   letter-spacing: .8px;
@@ -755,7 +846,6 @@ footer .footer-icon:hover {
   z-index: -1;
 }
 
-.button-1:main,
 .button-1:focus {
   -webkit-user-select: auto;
      -moz-user-select: auto;
@@ -804,6 +894,12 @@ footer .footer-icon:hover {
   white-space: nowrap;
 }
 
+.button-3:focus {
+  -webkit-box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
+          box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
+  outline: none;
+}
+
 .button-3:focus:not(:focus-visible):not(.focus-visible) {
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -812,12 +908,6 @@ footer .footer-icon:hover {
 
 .button-3:hover {
   background-color: #2c974b;
-}
-
-.button-3:focus {
-  -webkit-box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
-          box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
-  outline: none;
 }
 
 .button-3:disabled {
@@ -831,6 +921,117 @@ footer .footer-icon:hover {
   background-color: #298e46;
   -webkit-box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
           box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
+}
+
+.btn-view-more {
+  border-radius: 4px;
+  font-weight: 500;
+  padding: 3px 35px;
+  text-decoration: none;
+  font-family: 'Muli', sans-serif;
+  border: 1px solid #959899;
+  color: #3e4547;
+  font-size: 1.2rem;
+  -webkit-transition: 0.4s ease all;
+  transition: 0.4s ease all;
+  position: relative;
+}
+
+.btn-view-more:hover {
+  color: #fff !important;
+  background-color: #f03434 !important;
+  -webkit-transform: scaleX(1.3);
+          transform: scaleX(1.3);
+  width: 100%;
+  -webkit-box-shadow: 0 5px 10px rgba(114, 100, 100, 0.3);
+          box-shadow: 0 5px 10px rgba(114, 100, 100, 0.3);
+}
+
+.btn-view-more:hover::after {
+  content: "Xem thêm";
+  color: #fff;
+  background-color: #80b1574f !important;
+  -webkit-transform: scaleX(1.3);
+          transform: scaleX(1.3);
+  width: 100%;
+  opacity: 0;
+}
+
+.btn-view-more:visited {
+  border: 1px solid #959899;
+  border-radius: 4px;
+  color: #3e4547;
+  font-size: 1.15em;
+  font-weight: 500;
+  padding: 3px 35px;
+  text-decoration: none;
+  -webkit-transition: 0.4s ease all;
+  transition: 0.4s ease all;
+  font-family: 'Muli', sans-serif;
+  position: relative;
+}
+
+@media (min-width: 992px) {
+  .btn-view-more::after {
+    content: "Xem thêm";
+    border: 1px solid #5a5e5f00;
+    text-decoration: none;
+    top: 0;
+    left: 0;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 3px 32px;
+    border-radius: 4px;
+    position: absolute;
+    color: #6b6e6e18;
+    background-color: #85a86923 !important;
+    z-index: -1;
+    -webkit-transition: all .4s;
+    transition: all .4s;
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+
+.btn-scroll-to-top {
+  visibility: hidden;
+  position: fixed;
+  z-index: 1050;
+  bottom: 3vh;
+  font-size: 15px;
+  color: #fff;
+  right: 5%;
+  /* background-color: rgba(0,0,0,.171); */
+  background-color: #6E73FA;
+  opacity: 0.15;
+  border-radius: 20px;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  height: 40px;
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.btn-scroll-to-top i {
+  vertical-align: middle;
+  line-height: 1;
+  display: inline-block;
+}
+
+.btn-scroll-to-top:hover {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  color: #fff;
+  background-color: #474580;
+  opacity: 1;
 }
 
 .bg--dark {
@@ -859,6 +1060,10 @@ footer .footer-icon:hover {
 
 .bg--heading {
   background-color: #f03434;
+}
+
+html {
+  font-size: 15px;
 }
 
 body {
