--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -293,8 +293,164 @@ footer .footer-icon:hover {
   color: #fff !important;
 }
 
-.home-page .header-content {
+.bg--dark {
+  background-color: #343a40;
+}
+
+.bg--white {
+  background-color: #FFF;
+}
+
+.bg--section {
+  background-color: #f1f1f1;
+}
+
+.bg--transparent {
+  background-color: #ffffff00;
+}
+
+.bg--lightEB {
+  background-color: #474580;
+}
+
+.bg--lightBlue {
+  background-color: #ddfafa;
+}
+
+.bg--heading {
+  background-color: #f03434;
+}
+
+.margin-top {
   margin-top: 1rem;
+}
+
+.margin-top-2 {
+  margin-top: 2rem;
+}
+
+.margin-top-3 {
+  margin-top: 3rem;
+}
+
+.margin-top-4 {
+  margin-top: 4rem;
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
+}
+
+.margin-bottom-2 {
+  margin-bottom: 2rem;
+}
+
+.margin-bottom-3 {
+  margin-bottom: 3rem;
+}
+
+.margin-bottom-4 {
+  margin-bottom: 4rem;
+}
+
+.margin-left {
+  margin-left: 1rem;
+}
+
+.margin-left-2 {
+  margin-left: 2rem;
+}
+
+.margin-left-3 {
+  margin-left: 3rem;
+}
+
+.margin-left-4 {
+  margin-left: 4rem;
+}
+
+.margin-right {
+  margin-right: 1rem;
+}
+
+.margin-right-2 {
+  margin-right: 2rem;
+}
+
+.margin-right-3 {
+  margin-right: 3rem;
+}
+
+.margin-right-4 {
+  margin-right: 4rem;
+}
+
+.padding-top {
+  padding-top: 1rem;
+}
+
+.padding-top-2 {
+  padding-top: 2rem;
+}
+
+.padding-top-3 {
+  padding-top: 3rem;
+}
+
+.padding-top-4 {
+  padding-top: 4rem;
+}
+
+.padding-bottom {
+  padding-bottom: 1rem;
+}
+
+.padding-bottom-2 {
+  padding-bottom: 2rem;
+}
+
+.padding-bottom-3 {
+  padding-bottom: 3rem;
+}
+
+.padding-bottom-4 {
+  padding-bottom: 4rem;
+}
+
+.padding-left {
+  padding-left: 1rem;
+}
+
+.padding-left-2 {
+  padding-left: 2rem;
+}
+
+.padding-left-3 {
+  padding-left: 3rem;
+}
+
+.padding-left-4 {
+  padding-left: 4rem;
+}
+
+.padding-right {
+  padding-right: 1rem;
+}
+
+.padding-right-2 {
+  padding-right: 2rem;
+}
+
+.padding-right-3 {
+  padding-right: 3rem;
+}
+
+.padding-right-4 {
+  padding-right: 4rem;
+}
+
+.home-page .header-content {
+  padding-top: 1rem;
 }
 
 .home-page .header-content .home-list {
@@ -455,6 +611,7 @@ footer .footer-icon:hover {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  margin-bottom: 2rem;
   padding: 0.6rem 1.2rem;
 }
 
@@ -491,6 +648,10 @@ footer .footer-icon:hover {
   font-weight: 700;
 }
 
+.home-page .recommended-news .admission-news .admission-news__content {
+  margin-bottom: 0.6rem;
+}
+
 .home-page .recommended-news .admission-news .admission-news__content .card {
   margin-bottom: 1.2rem;
 }
@@ -507,6 +668,7 @@ footer .footer-icon:hover {
 
 .home-page .college-admissions .college-admissions__content {
   position: relative;
+  margin-bottom: 2rem;
 }
 
 .home-page .college-admissions .college-admissions__content .card {
@@ -535,6 +697,7 @@ footer .footer-icon:hover {
 
 .home-page .infrastructure .infrastructure__content {
   margin-top: 0.8rem;
+  margin-bottom: 2rem;
   position: relative;
 }
 
@@ -639,7 +802,11 @@ footer .footer-icon:hover {
 }
 
 .home-page .news-events .news-events__heading .highlight-underline {
-  margin-top: 0;
+  margin: 0;
+}
+
+.home-page .news-events .news-events__content {
+  margin-bottom: 2rem;
 }
 
 .home-page .news-events .news-events__content .news-card {
@@ -712,6 +879,7 @@ footer .footer-icon:hover {
 }
 
 .home-page .news-events .announcement .announcement-list .announcement-list__content {
+  margin-bottom: 2rem;
   padding: 0.9rem 1rem;
 }
 
@@ -723,6 +891,10 @@ footer .footer-icon:hover {
   position: relative;
 }
 
+.home-page .tuition .tuition__content {
+  margin-bottom: 2rem;
+}
+
 .home-page .tuition .tuition__content .tuition-card .card-img-top {
   height: 11rem;
 }
@@ -731,8 +903,34 @@ footer .footer-icon:hover {
   position: relative;
 }
 
+.home-page .activities .activities__content {
+  padding-bottom: 2rem;
+}
+
+.home-page .activities .activities__content .activity-card {
+  margin-bottom: 0.5rem;
+  position: relative;
+}
+
 .home-page .activities .activities__content .activity-card .card-img-top {
   height: 12rem;
+}
+
+.home-page .activities .activities__content .activity-card .card-body {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  text-align: center;
+  color: #FFF;
+  background: #f5eded3d;
+  font-weight: 500;
+}
+
+.home-page .activities .activities__content .activity-card .card-body h5 {
+  font-size: 1.2rem;
 }
 
 .home-page section .heading--center {
@@ -749,7 +947,7 @@ footer .footer-icon:hover {
 .home-page .highlight-underline {
   line-height: 1.4;
   font-weight: 500;
-  margin: 1rem 0 2rem;
+  margin: 1rem 0 3.2rem;
   position: relative;
   display: inline-block;
   text-transform: uppercase;
@@ -980,7 +1178,7 @@ footer .footer-icon:hover {
     left: 0;
     font-size: 1.2rem;
     font-weight: 500;
-    padding: 3px 32px;
+    padding: 3px 34px;
     border-radius: 4px;
     position: absolute;
     color: #6b6e6e18;
@@ -988,8 +1186,8 @@ footer .footer-icon:hover {
     z-index: -1;
     -webkit-transition: all .4s;
     transition: all .4s;
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -1032,34 +1230,6 @@ footer .footer-icon:hover {
   color: #fff;
   background-color: #474580;
   opacity: 1;
-}
-
-.bg--dark {
-  background-color: #343a40;
-}
-
-.bg--white {
-  background-color: #FFF;
-}
-
-.bg--section {
-  background-color: #f1f1f1;
-}
-
-.bg--transparent {
-  background-color: #ffffff00;
-}
-
-.bg--lightEB {
-  background-color: #474580;
-}
-
-.bg--lightBlue {
-  background-color: #ddfafa;
-}
-
-.bg--heading {
-  background-color: #f03434;
 }
 
 html {
